# grafica

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst  instalacion.rst  personalizacion.rst
grafica/: __init__.py  breadcrumbs.html  footer.html  header.html  layout.html  localtoc.html  page.html  search.html  theme.toml
grafica/static/css/: theme.css
grafica/static/js/: css.js
